--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,28 @@
 pipeline {
     agent any
+
     stages {
-        stage('Hello') {
+        stage('Clone Repository') {
             steps {
-                echo 'My Jenkins Pipeline'
+                git branch: 'main', url: 'https://github.com/embuntiara/web-cece.git'
+            }
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                bat 'docker build -t webcece .'
+            }
+        }
+
+        stage('Run Containers') {
+            steps {
+                bat 'docker compose up -d'
+            }
+        }
+
+        stage('Migrate Database') {
+            steps {
+                bat 'docker exec webcece php artisan migrate --force'
             }
         }
     }
